--- a/ProjetoAprendizado/tokenServer/Properties/launchSettings.json
+++ b/ProjetoAprendizado/tokenServer/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:33672",
-      "sslPort": 44305
+      "applicationUrl": "http://localhost:15994",
+      "sslPort": 44300
     }
   },
   "profiles": {
-    "Server": {
+    "tokenServer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7260;http://localhost:5083",
+      "applicationUrl": "https://localhost:7190;http://localhost:5148",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
